# AnSci_calhacks

./: .env.template  .gitignore  ARCHITECTURE.md  README.md  README_COMPREHENSIVE.md  SETUP.md  TROUBLESHOOTING.md  end_to_end_test.py  package-lock.json  setup.bat  setup.sh  start-dev.sh  test-connection.sh  test_no_fade_out.py
animation_implementation/: core_concepts_script.json  simple_demo_script.json
app/: page.tsx
backend/: README.md  app.py  code_executor.py  final_demo.py  llm_integration.py  main.py  pyproject.toml  requirements.txt  run_outline.py  test_anthropic_animation.py  test_enhanced_validation.py  test_improved_validation.py  test_validation.py  test_verifier_enhanced.py
backend/ansci/: PRODUCTION_ARCHITECTURE.py  animate.py  animation_service.py  audio.py  models.py  outline.py  production_example.py  quality_assurance.py  render.py  service.py  verify.py  workflow.py
backend/tests/: test_anthropic_api.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  page.tsx
frontend/app/app/: page.tsx
frontend/lib/: api.ts
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: DocumentUpload.css  DocumentUpload.js  QueryInterface.js  (+5 more)
render-server/: .env.example  app.py  requirements.txt
render-server/services/: claude_service.py  manim_generator.py  pdf_processor.py  supabase_client.py  vapi_service.py  video_assembler.py
render-server/utils/: __init__.py  config.py  logging.py  progress_tracker.py  sync_validator.py  types.py  validation.py
