[project]
name = "ansci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.54.0",
    "dotenv>=0.9.9",
    "langgraph>=0.4.8",
    "lmnt>=1.2.0",
    "manim>=0.19.0",
    "numpy>=2.3.1",
    "pydantic (>=2.11.7,<3.0.0)",
    "typing-extensions>=4.14.0",
]
